--- a/layers.yml
+++ b/layers.yml
@@ -17,6 +17,15 @@
   tileType: png
   serverParts: [ "a", "b", "c" ]
   timeout: 168h
+- key: opentopo
+  name: Opentopo
+  minZoom: 2
+  maxZoom: 18
+  keepProbability: 0.5
+  url: "https://{s}.tile.opentopomap.org/{z}/{x}/{y}.png"
+  tileType: png
+  serverParts: [ "a", "b", "c" ]
+  timeout: 168h
 - key: yandex_map
   name: Yandex map
   minZoom: 2
